Navbar is now collapsing. But it has a small bug.

--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@
     --navbar-button-height: 1.35rem;
     --siteMenu-button-width: 1.75rem;
     --siteMenu-button-height: 1.3rem;
+    --navTransitionTime: 1.0s;
 }
 
 html {
@@ -84,7 +85,11 @@ hr {
 /**** Navbar *****/
 
 #navbar-group {
-    transition: top 1.0s;
+    position: absolute;
+    top: 0;
+    width: 100%;
+
+    transition: top var(--navTransitionTime);
 }
 
 /* TODO: Find a way to add a gradient to the border like it is in the real thing - the bottom is slightly darker than the top. */
@@ -98,6 +103,8 @@ nav {
     padding: 0.15rem 0.1rem 0.15rem 0.1rem; /* top right bottom left */
     border: 1px solid var(--top-level-border);
     font-family: var(--site-font-family);
+
+    /* transition: top 1.0s; */
 }
 
 /* This styles the nav to it's default visible look */
@@ -233,6 +240,8 @@ nav ul {
     width: 100%;
     max-height: 100%;
     overflow-y: scroll; /* Displays a scrollbar on the tracks-list ul element */
+
+    transition: top var(--navTransitionTime);
 }
 
 .tracksListHidden {
